Updated all libs to newer versions.